[package]
name = "rust-wasm-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.63"
time = { version = "0.3.21", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.86"
